@@ -136,6 +136,7 @@ namespace Castle.MonoRail.Framework.Services
 		{
 			RegisterComponent("CaptureFor", typeof(CaptureFor));
 			RegisterComponent("SecurityComponent", typeof(SecurityComponent));
+			RegisterComponent("ChildContentComponent", typeof(ChildContentComponent));
 		}
 
 		/// <summary>
