@@ -1,0 +1,3 @@
+#blockcomponent(ChildContentComponent)
+Something
+#end
