@@ -1,0 +1,1 @@
+View content and $componentChildContent
